--- a/Inventory Management System with ADO.Net/Inventory Management System with ADO.Net/Views/Product/Index.cshtml
+++ b/Inventory Management System with ADO.Net/Inventory Management System with ADO.Net/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Inventory_Management_System_with_ADO.Net.Models.ProductDataAccess>
+﻿@model IEnumerable<Inventory_Management_System_with_ADO.Net.Models.Product>
 
 @{
     Layout = null;
